--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
+
+
 {
   "name": "ionic_t_bagasbas",
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "homepage": "https://JamesRymarc29.github.io/ionic-t-bagasbas/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -41,6 +44,7 @@
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^6.1.1",
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
