Added deploy command in the package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "version": "0.0.1",
   "type": "module",
   "homepage": "https://JamesRymarc29.github.io/ionic-t-bagasbas/",
-  "scripts": {
+  
+  "scripts": { "predeploy" : "npm run build",
+  "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
